--- a/2.Integration-apache-camel-with-activemq-and-kafka/camel-microservice-b/bin/pom.xml
+++ b/2.Integration-apache-camel-with-activemq-and-kafka/camel-microservice-b/bin/pom.xml
@@ -9,12 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.in28minutes.microservices</groupId>
-	<artifactId>camel-microservice-a</artifactId>
+	<artifactId>camel-microservice-b</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>camel-microservice-a</name>
+	<name>camel-microservice-b</name>
 	<description>Demo project for Camel with Spring Boot</description>
 	<properties>
-		<java.version>14</java.version>
+		<java.version>11</java.version>
 		<camel.version>3.11.0</camel.version>
 	</properties>
 	<dependencies>
@@ -26,11 +26,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
-			<version>3.11.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -57,22 +56,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>14</source>
-					<target>14</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>14</source>
-					<target>14</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
