--- a/2.Integration-apache-camel-with-activemq-and-kafka/camel-microservice-b/pom.xml
+++ b/2.Integration-apache-camel-with-activemq-and-kafka/camel-microservice-b/pom.xml
@@ -45,6 +45,11 @@
 			<version>3.11.0</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-jacksonxml-starter</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
