--- a/2.Integration-apache-camel-with-activemq-and-kafka/camel-microservice-b/pom.xml
+++ b/2.Integration-apache-camel-with-activemq-and-kafka/camel-microservice-b/pom.xml
@@ -38,6 +38,11 @@
 			<version>3.11.0</version>
 		</dependency>
 
+		  <dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-kafka-starter</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 		  
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
