Exploring Content Based Routing and Splitter EI Patterns in Camel

--- a/4.part/camel-microservice-a/pom.xml
+++ b/4.part/camel-microservice-a/pom.xml
@@ -50,6 +50,12 @@
 			<artifactId>camel-kafka-starter</artifactId>
 			<version>3.11.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-csv-starter</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
