Camel Best Practices - Secure Messages with Encryption

--- a/5.best-practices/camel-microservice-a/src/main/resources/application.properties
+++ b/5.best-practices/camel-microservice-a/src/main/resources/application.properties
@@ -12,3 +12,6 @@ camel.springboot.duration-max-seconds = 60
 # logging.level.org.apache.camel.spring.boot = INFO
 # logging.level.org.springframework.amqp.rabbit = DEBUG
 logging.level.org.apache.camel.impl = DEBUG
+
+#camel.component.activemq.password
+#camel.component.activemq.username
