--- a/5.best-practices/camel-microservice-a/pom.xml
+++ b/5.best-practices/camel-microservice-a/pom.xml
@@ -41,6 +41,12 @@
 		
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-crypto-starter</artifactId>
+			<version>3.11.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-activemq-starter</artifactId>
 			<version>3.11.0</version>
 		</dependency>
